--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: register-app-deployment
+  name: gitops-app-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: register-app
+      app: gitops-app
   template:
     metadata:
       labels:
-        app: register-app
+        app: gitops-app
     spec:
       containers:
-        - name: register-app
-          image: ashfaque9x/register-app-pipeline:1.0.0-9
+        - name: gitops-app
+          image: hkalsait/cicd-pipeline-app:1.0.0-24
           resources:
             limits:
               memory: "256Mi"
