--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: register-app-service
+  name: gitops-app-service
   labels:
-    app: register-app 
+    app: gitops-app 
 spec:
   selector:
-    app: register-app
+    app: gitops-app
 
   ports:
     - port: 8080
