--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gitops-app-deployment
+  name: myapp-deployment
 spec:
   replicas: 2
   selector:
